--- a/contato.html
+++ b/contato.html
@@ -5,8 +5,16 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Contato</title>
+    <link rel="stylesheet" href="assets/CSS/style.css">
+</head>
 </head>
 <body>
+    <ul>
+        <li>
+            <a href="index.html">Home</a>
+        </li>
+    </ul>
+
     <h1>Entre em contato comigo</h1>
     <form>
         <label for="Nome">Nome:</label><br>
